# 8-bit_compiler_design

./: .gitmodules  CMakeLists.txt  grammer.md  input.simp  lexer.c  my_program  readme.md  test_program.sl
include/: config.hpp  types.hpp
include/lexer/: forward_declaration.hpp  lexer.hpp  token.hpp  tokenizer_state_machine.hpp
src/: main.cpp
src/lexer/: lexer.cpp
tmp/: lexer.h  main.c  parser.h
